// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicSearch should render the default html output 1`] = `
<div class="tc-faceted-clear-basic theme-tc-faceted-clear-basic">
  <button role="link"
          aria-label
          data-feature="filter.basic.clear"
          type="button"
          class="tc-faceted-clear-basic-button theme-tc-faceted-clear-basic-button btn-icon-only btn btn-link"
  >
    <svg name="talend-trash"
         class="theme-tc-svg-icon tc-svg-icon"
         focusable="false"
         aria-hidden="true"
    >
      <use xlink:href="#talend-trash">
      </use>
    </svg>
    <span>
    </span>
  </button>
</div>
`;

exports[`BasicSearch should render the html output with a disabled action 1`] = `
<div class="tc-faceted-clear-basic theme-tc-faceted-clear-basic">
  <button disabled
          role="link"
          aria-label
          data-feature="filter.basic.clear"
          type="button"
          class="tc-faceted-clear-basic-button theme-tc-faceted-clear-basic-button btn-icon-only theme-btn-disabled btn btn-link"
  >
    <svg name="talend-trash"
         class="theme-tc-svg-icon tc-svg-icon"
         focusable="false"
         aria-hidden="true"
    >
      <use xlink:href="#talend-trash">
      </use>
    </svg>
    <span>
    </span>
  </button>
</div>
`;
